--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -1,5 +1,10 @@
 <section class="panel panel-emprofile">
-    <div class="panel-head"><h1>Employee Profile</h1></div>
+    <div class="panel-head"><h1>Employee Profile</h1>
+    <div style="
+    position: absolute;
+    right: 20px;
+    top: 20px;"><button class="btn btn-default btn-xs">return my profile</button></div>
+    </div>
     <div class="panel-body"></div>
 </section>
 <section class="panel panel-list panel-training">
