--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -1,9 +1,14 @@
 <div class="col-md-6 userdata">
     <div class="col-md-5 image">
         <img src="{{contacts.photo}}" class="img-circle img-thumbnail">
+        <div class="lync-status-container">
+          <label>Lync state:</label>
+          <div class="lync-status" data-email="{{contacts.email}}"></div>
+        </div>        
     </div>
     <div class="col-md-7 info">
-        <p class="name">{{contacts.name}}</p>
+        <p class="name">{{contacts.name}}
+        </p>
         <p class="chinese">{{contacts.chinesename}}</p>
         <p class="title">
             <a href="mailto: {{contacts.email}}" class="">{{contacts.email}}</a>
