--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -41,7 +41,7 @@
         <div class="panel-body panel-body-list"></div>
       {{else}}
         <div class="panel-body">
-          <table class="table table-hover panel-body-list">
+          <table class="table table-hover table-condensed panel-body-list">
             {{#if caption}}
             <caption>
               <div class="title">{{caption}}</div>
@@ -53,7 +53,7 @@
             {{#if tableColumns}}
             <thead>
               <tr>
-                <th>#</th>
+                <th class="th_index">#</th>
                 {{#each tableColumns}}
                 <th>{{this}}</th>
                 {{/each}}
