--- a/js/app/templates/partials/booklist.html
+++ b/js/app/templates/partials/booklist.html
@@ -1,7 +1,9 @@
 {{#each campus_book}}
 <tr>
   <td>{{id}}</td>
-  <td>{{title}}</td>
+  <td>{{title}} 
+    {{#if isNew}}<span class="label-newbook label label-primary">New</span>{{/if}}
+  </td>
   <td>{{category}}</td>
   <td>{{quantity}}</td>
 </tr>
