--- a/js/app/templates/partials/contactlist.html
+++ b/js/app/templates/partials/contactlist.html
@@ -1,4 +1,4 @@
-{{#each this}}
+{{#each contacts}}
 <tr>
   <td width=10%>
       {{#if ../lyncEnabled}}
@@ -8,7 +8,7 @@
        {{/if}}      
   </td>
   <td><img src="{{photo}}" alt="" class="img-circle img-thumbnail"/></td>
-  <td>{{name}}</td>
+  <td><b>{{name}}</b></td>
   <td>{{chinesename}}</td>
   <td>{{ext}}</td>
   <td>{{team}}</td>
