--- a/js/app/templates/partials/srcitem.html
+++ b/js/app/templates/partials/srcitem.html
@@ -3,8 +3,14 @@
     <span class="glyphicon glyphicon-user"></span> <b>{{campus_src.author}}</b> <span class="splitter"> | </span>
     <span class="glyphicon glyphicon-calendar"></span> {{campus_src.pubdate}}
     <span class="banner-right">
-        <span><span class="numjoined">{{campus_src.numJoined}}</span></span>
+        <span>
+            <span class="numjoined label label-primary">{{campus_src.numJoined}}</span>
+        </span>
+        {{#if campus_src.available}}
         <span class="btnJoin"><a href="{{campus_src.joinLink}}" class="btn btn-default btn-xs">Join</a></span>
+        {{else}}
+         <span class="text-muted"> closed </span>
+        {{/if}}
     </span>
 </div>
 <div class="content row">
