--- a/js/app/templates/partials/srclist.html
+++ b/js/app/templates/partials/srclist.html
@@ -2,11 +2,15 @@
 <div class="campus-item">
 	<div class="head"><h4>{{title}}</h4>
 			<span class="banner-right">
-	    	<span><span class="numjoined">{{numJoined}}</span></span>
-	    	{{#if ../noJoinLink}}
-        		<span>joined</span><span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default  btn-xs" target="_blank"  >cancel</a></span>
-        		{{else}}
-	    	<span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default   btn-xs" target="_blank"  >Join</a></span>
+	    	 <span class="numjoined label label-primary">{{numJoined}}</span>
+	    	{{#if available}}
+		    	{{#if ../../noJoinLink}}
+	        		<span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default  btn-xs" target="_blank"  >cancel</a></span>
+	        		{{else}}
+		    	<span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default   btn-xs" target="_blank"  >Join</a></span>
+		    	{{/if}}
+	    	{{else}}
+	    		<span class="text-muted">closed</span>
 	    	{{/if}}
 	    </span>
 	</div>
