--- a/js/app/templates/partials/surveylist.html
+++ b/js/app/templates/partials/surveylist.html
@@ -2,8 +2,12 @@
 <div class="campus-item">
 	<div class="head"><h4>{{title}}</h4>
 			<span class="banner-right">
-	    	<span><span class="numjoined">{{numVoted}}</span></span>
-	    	<span class="btnJoin"><a href="{{votelink}}" class="btn btn-default   btn-xs" target="_blank"  >Vote</a></span>
+	    	 <span class="numjoined label label-primary">{{numVoted}}</span>
+	    	{{#if available}}
+	    		<span class="btnJoin"><a href="{{votelink}}" class="btn btn-default   btn-xs" target="_blank"  >Vote</a></span>
+	    	{{else}}
+	         	<span class="text-muted"> closed </span>
+	        {{/if}}
 	    </span>
 	</div>
 	<div class="banner">
