--- a/js/app/templates/partials/traininglist.html
+++ b/js/app/templates/partials/traininglist.html
@@ -4,27 +4,32 @@
     <h4>{{title}}
         {{#ifCond ../curUser author}}
         <span class="trcode"><a class="trcode-link" href="javascript:;" data-toggle="popover" data-placement="top"  title="view training code" data-content="{{trainingcode}}"><i class="fa fa-key"></i></a></span>
-        {{else}}
-        <a href="#" class="btn btn-default btn-xs btn-markdone">Mark Done</a>
         {{/ifCond}}
     </h4>
 		<span class="banner-right">
       <span class="numjoined label label-primary">{{numJoined}}</span>
       {{#if available}}
-      {{#if ../../noJoinLink}}
-        <span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default btn-xs" target="_blank"  >
-        {{#ifCond ../../../curUser author}}
-        open 
-        {{else}}
-        unregister
-        {{/ifCond}}
-
-      </a></span>
+          {{#if ../../noJoinLink}}
+              
+              {{#ifCond ../../../curUser author}}
+                  <span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default btn-xs" target="_blank"  > open </a></span>
+              {{else}}
+                  <div class="btn-group">
+                    <a href="{{joinLink}}" target="_blank" class="btn btn-default btn-xs">Unregister</a>
+                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                      <span class="caret"></span>
+                      <span class="sr-only">Toggle Dropdown</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-xs" role="menu">
+                      <li><a href="#" class="btn-markdone" data-item-id="{{id}}">Mark Done</a></li>
+                    </ul>
+                  </div>
+              {{/ifCond}}            
+          {{else}}
+              <span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default btn-xs" target="_blank"  >register </a></span>
+          {{/if}}
       {{else}}
-      <span class="btnJoin"><a href="{{joinLink}}" class="btn btn-default btn-xs" target="_blank"  >register </a></span>
-      {{/if}}
-      {{else}}
-       <span class="text-muted">closed</span>
+          <span class="text-muted">closed</span>
       {{/if}}  
     </span>
 	</div>
