--- a/js/app/templates/home/notify_birthday.html
+++ b/js/app/templates/home/notify_birthday.html
@@ -4,8 +4,8 @@
     {{#if contacts.morepage}}
     <!-- Carousel nav -->
     <div class="controls pull-right hidden-xs">
-      <a class="carousel-control left fa fa-chevron-left btn btn-success" href=".carousel-birthday" data-slide="prev"></a>
-      <a class="carousel-control right fa fa-chevron-right btn btn-success " href=".carousel-birthday" data-slide="next"></a> 
+      <a class="carousel-control left fa fa-chevron-left btn" href=".carousel-birthday" data-slide="prev"></a>
+      <a class="carousel-control right fa fa-chevron-right btn" href=".carousel-birthday" data-slide="next"></a> 
     </div>
     {{/if}}
 
