--- a/js/app/templates/home/notify_newhire.html
+++ b/js/app/templates/home/notify_newhire.html
@@ -17,12 +17,12 @@
               <div class="row">
                 <div class="col-sm-3 text-center avatar">
                     <a href="#employees/{{id}}" data-employee-id="{{id}}" class="profilelink">
-                        <img class="img-circle  img-thumbnail" src="{{image}}">
+                        <img class="img-circle  img-thumbnail" src="{{photo}}">
                     </a>
                 </div>
                 <div class="col-sm-9 intro">
                   <p class="statement">{{intro}}</p>
-                  <p class="small"><span class="name site-role label label-primary">{{name}}</span><span class="team">{{team}}</span><span class="title">{{title}}</span></p>
+                  <p class="small"><span class="name site-role label label-primary">{{name}}</span><span class="team">{{team}}</span><span class="project">{{project}}</span></p>
                 </div>
               </div>
             </blockquote>
