--- a/js/app/templates/home/profile.html
+++ b/js/app/templates/home/profile.html
@@ -1,7 +1,7 @@
 <div class="profile-avatar">
     <a href="#/profile" class="profilelink"><img src="{{user.info.image}}" class="img-circle img-thumbnail"/></a>
     <div class="profile-name"> {{user.info.name}}</div>
-    <div class="site-role label label-primary"> {{user.role.role}} </div>
+<!--     <div class="site-role label label-primary"> {{user.role.role}} </div> -->
 </div>
 <ul class="profile-updates">
    <li class="profile-update-item"><span class="count badge bg-color-red">{{user.srcData.length}}</span><span class="statement">SRC Events</span></li> 
