--- a/js/app/templates/partials/contactlist.html
+++ b/js/app/templates/partials/contactlist.html
@@ -7,9 +7,13 @@
         </div>
        {{/if}}      
   </td>
-  <td><img src="{{photo}}" alt="" class="img-circle img-thumbnail"/></td>
+  <td>
+    <div class='contact-img-box'> 
+      <img src="{{photo}}" alt="" class="img-circle img-thumbnail"/>
+    </div>
+  </td>
   <td><b>{{name}}</b></td>
-  <td>{{chinesename}}</td>
+  <td><b>{{chinesename}}</b></td>
   <td>{{ext}}</td>
   <td>{{team}}</td>
   <td>{{manager}}</td>
