--- a/js/app/templates/home/campus_update.html
+++ b/js/app/templates/home/campus_update.html
@@ -7,7 +7,7 @@
         <div class="list-group list-group-src shadow-bottom-m">
           <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_src}}</div>
           {{#each campus_src}}
-          <a data-item-id={{id}} href="#campus/src/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{pubdate}}</span></a>
+          <a data-item-id={{id}} href="#campus/src/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{formatDate pubdate}}</span></a>
           {{/each}}
         </div>
       </div>
@@ -15,7 +15,7 @@
             <div class="list-group list-group-training shadow-bottom-m">
                 <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_training}}</div>
                 {{#each campus_training}}
-                <a data-item-id={{id}}  href="#campus/trainings/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{pubdate}}</span></a>
+                <a data-item-id={{id}}  href="#campus/trainings/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{formatDate pubdate}}</span></a>
                 {{/each}}
           </div>
       </div>
