--- a/js/app/templates/partials/pmimageitem.html
+++ b/js/app/templates/partials/pmimageitem.html
@@ -1,4 +1,4 @@
-<div class="content row">
+<div class="content clearfix">
    <div class="item-image"><img src="{{image}}" class="img-responsive"></div>
     <div class="item-description">
           <p>{{{description}}}</p>
