--- a/js/app/templates/partials/srcitem.html
+++ b/js/app/templates/partials/srcitem.html
@@ -13,9 +13,9 @@
         {{/if}}
     </span>
 </div>
-<div class="content row">
-   <div class="col-md-3 item-image"><img src="{{campus_src.imageUrl}}" class="img-responsive"></div>
-    <div class="col-md-9 item-content bodycontent">
+<div class="content clearfix">
+   <div class="col-md-2 item-image"><img src="{{campus_src.imageUrl}}" class="img-responsive"></div>
+    <div class="col-md-10 item-content bodycontent">
           <p>{{{campus_src.content}}}</p>
     </div>
 </div>
