--- a/js/app/templates/partials/trainingpagelist.html
+++ b/js/app/templates/partials/trainingpagelist.html
@@ -3,8 +3,8 @@
   <td>{{id}}</td>
   <td>{{title}}</td>
   <td>{{author}}</td>
-  <td>{{pubdate}}</td>
-  <td>{{timespan}}</td>
+  <td><b>{{formatDate pubdate}}</b> <sub class="splitter">{{timespan}}</span> </td>
+
   <td>{{Rank}}</td>
   <td>{{category}}</td>
   {{#if available}}
