--- a/css/app/layout.css
+++ b/css/app/layout.css
@@ -30,11 +30,12 @@ body {
 
 #footer{
       width: 100%;
-      background-color: rgba(0,0,0,.4);
+      background-color: rgba(31, 31, 31, 0.98);
+      letter-spacing:.7px;
 }
 
 #footer .container {
-    font-size:12px;
+    font-size:11px;
     text-align: center;
 }
 
