--- a/css/app/module.css
+++ b/css/app/module.css
@@ -899,9 +899,10 @@ a.profilelink:hover img{
 }
 
 .campus-item .banner {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #C4C4C4;
     padding: 10px 15px;
     position: relative;
+    background: #DBDBDB;
 }
 
 .campus-item .banner .label-default {
@@ -948,22 +949,31 @@ a.profilelink:hover img{
    /*  margin-left: 10px; */
 }
 
-.campus-item .splitter {
+.splitter {
     margin:0px 5px;
 }
 
 .campus-item .content{
     padding:20px;
+    background: #FCFCFC;
 }
 
 .campus-item .attachments{
-    padding: 10px;
+    padding: 20px 10px 15px 10px;
     border-radius: 0 0 .5em .5em;
-    background: #ddd;
+    background: #EBEBEB;
+     -webkit-box-shadow: inset 0px 6px 7px -6px #999;
+    -moz-box-shadow: inset 0px 6px 7px -6px #999;
+    -ms-box-shadow: inset 0px 6px 7px -6px #999;
+    box-shadow: inset 0px 6px 7px -6px #999;
 }
 
 .campus-item .attachments .item{
     margin-left:5px;
+}
+.campus-item .attachments .item .label{
+    font-size: 1em;
+    font-weight: normal;
 }
 
 .campus-item .footer{
@@ -1218,7 +1228,7 @@ a.profilelink:hover img{
 
 .campus-item .head{
     border-bottom: 1px solid #ddd;
-    padding: 0px 20px;
+    padding: 5px 20px;
 }
 
 .campus-item .head h4{
@@ -1228,7 +1238,7 @@ a.profilelink:hover img{
 .campus-item.seemore {
     text-align: center;
     border-radius: 0;
-    margin: 20px 0;
+    margin: 0px 0 20px 0;
     padding: 4px 0; 
     background: repeating-linear-gradient( white, #ecefef 5px, #ccc 5px, #ccc 6px );
 }
@@ -1266,10 +1276,17 @@ a.profilelink:hover img{
 .campus-items .campus-item .footer{
     right: 10px;
 }
-
+.campus-items .campus-item .item-image {
+    padding:0 5px 0;
+}
 .campus-items .campus-item .item-image img{
-    /* max-width: 70%;
-    margin-left: 15% */
+    -webkit-box-shadow: 1px 1px 5px #858585;
+    -moz-box-shadow: 1px 1px 5px #858585;
+    -ms-box-shadow: 1px 1px 5px #858585;
+    -o-box-shadow: 1px 1px 5px #858585;
+    box-shadow: 1px 1px 5px #858585;
+    width: 100%;
+    height: 100px;
 }
 
 /* list page base */
@@ -1328,6 +1345,7 @@ a.profilelink:hover img{
 
 .panel-list .panel-body{
     padding: 0 15px;
+    margin-bottom: 20px;
 }
 
 .panel-list .panel-body .campus-items{
