--- a/js/app/templates/partials/contactlist.html
+++ b/js/app/templates/partials/contactlist.html
@@ -1,3 +1,4 @@
+{{#if contacts.length}}
 {{#each contacts}}
 <tr>
   <td width=10%>
@@ -19,3 +20,8 @@
   <td>{{manager}}</td>
 </tr>
 {{/each}}
+{{else}}
+<tr>
+<td colspan="7" class="noresult">no results.</td>  
+</tr>
+{{/if}}
