--- a/js/app/templates/partials/srclist.html
+++ b/js/app/templates/partials/srclist.html
@@ -19,7 +19,7 @@
 	    <span class="glyphicon glyphicon-user"></span> <b>{{author}}</b> <span class="splitter"> | </span>
 	    <span class="glyphicon glyphicon-calendar"></span> {{formatDate pubdate}}
 	</div>
-	<div class="content row">
+	<div class="content clearfix">
 	   <div class="col-md-2 item-image"><img src="{{imageUrl}}" class="img-responsive"></div>
 	    <div class="col-md-10 item-content bodycontent">
 	          <p>{{{content}}}</p>
@@ -29,7 +29,7 @@
 	<div class="attachments">
 	    <span class="glyphicon glyphicon-paperclip"></span> 
 	    {{#each attachments}}
-	        <span class="attach_{{@index}} item"><a target="_blank" href="{{ServerRelativeUrl}}">{{FileName}}</a></span> <span class="splitter"></span>
+	        <span class="attach_{{@index}} item"><a class="label label-primary" target="_blank" href="{{ServerRelativeUrl}}">{{FileName}}</a></span> <span class="splitter"></span>
 	    {{/each}}
 	</div>
 	{{/if}}
