--- a/js/app/templates/partials/booklist.html
+++ b/js/app/templates/partials/booklist.html
@@ -1,3 +1,4 @@
+{{#if campus_book.length}}
 {{#each campus_book}}
 <tr>
   <td>{{id}}</td>
@@ -8,3 +9,8 @@
   <td>{{quantity}}</td>
 </tr>
 {{/each}}
+{{else}}
+<tr class="noresult">
+  <td colspan="4">no results.</td>
+</tr>
+{{/if}}
