--- a/css/app/module.css
+++ b/css/app/module.css
@@ -448,7 +448,10 @@ sidebar nav list
 }
 
 .panel-news .panel-body  .panel-body-pic img{
-    /* box-shadow: 0px 0px 4px #ccc; */
+    -webkit-box-shadow: 2px 2px 6px #646363;
+    -moz-box-shadow: 2px 2px 6px #646363;
+    -ms-box-shadow: 2px 2px 6px #646363;
+    box-shadow: 2px 2px 6px #646363;
     width:95%;
 }
 .panel-news .panel-body h3 {
@@ -881,7 +884,15 @@ a.profilelink:hover img{
 .campus_modal .modal-body {padding:0px;}
 .campus_modal .modal-body a:hover{
     text-decoration: none;
+}
 
+.campus_modal .campus-item .content{
+    border-radius:6px;
+}
+
+.campus_modal .campus-item .item-image{
+    padding: 0;
+    margin-top: 10px
 }
 
 .campus-item {
@@ -954,7 +965,7 @@ a.profilelink:hover img{
 }
 
 .campus-item .content{
-    padding:20px;
+    padding:15px;
     background: #FCFCFC;
 }
 
@@ -1280,11 +1291,11 @@ a.profilelink:hover img{
     padding:0 5px 0;
 }
 .campus-items .campus-item .item-image img{
-    -webkit-box-shadow: 1px 1px 5px #858585;
-    -moz-box-shadow: 1px 1px 5px #858585;
-    -ms-box-shadow: 1px 1px 5px #858585;
-    -o-box-shadow: 1px 1px 5px #858585;
-    box-shadow: 1px 1px 5px #858585;
+    -webkit-box-shadow: 0px 0px 5px #B8B4B4;
+    -moz-box-shadow: 0px 0px 5px #B8B4B4;
+    -ms-box-shadow: 0px 0px 5px #B8B4B4;
+    -o-box-shadow: 0px 0px 5px #B8B4B4;
+    box-shadow: 0px 0px 5px #B8B4B4;
     width: 100%;
     height: 100px;
 }
